# BioCad_bd

./: .gitignore  README.md  environment.yml
biocode/: README.md  __init__.py  __main__.py  align.py  ancestral.py  annotate.py  clades.py  cli.py  config.py  errors.py  grouping.py  gui.py  io.py  logging_.py  model.py  mutations.py  pipeline.py  pyproject.toml  ranking.py  report.py  tools.py  validate.py  viz.py
biocode/_fixtures/: sample.con.tre
biocode/biocode.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
biocode/trees/: __init__.py  compare.py  iqtree.py  mrbayes.py
data/: example.fasta  example.tsv
data/BCR/: output.fasta
data/references/: IGHV.fasta  all_D.nin  all_D.njs  all_D.nos  all_J.fasta  all_J.ndb  all_J.nin  all_J.njs  all_J.nos  all_V.fasta  all_V.ndb  all_V.nin  all_V.njs  all_V.nog  all_V.nos  all_V.nsq  human_gl.aux
misc/: tsv_to_fasta.py
misc/analitica_trees/: analiz_trees.py  report2.json
misc/tree_analytics/: tree_analytics.py
mrbayes/: readme.md
results/BCR/: BCR_data_filtered.tsv  amino.lnk  clades_report.json
results/example_report/: BCR_data_filtered.tsv
scripts/: paths.py  run_pipeline.py
scripts/01_filter_sequences/: README.md  filter_sequences.py
scripts/02_group_by_germlines/: README.md  (+1 more)
tests/: README.md  TESTING.md  TEST_REPORT.md  conftest.py  paths.py  test_analyze_mutations_unit.py  test_filter_and_save.py  test_filter_by_symbol_count.py  test_filter_sequences.py  test_fixtures.py  test_group_by_germlines.py  test_pipeline.py  test_translate_to_amino.py  test_tree_analytics.py  visualize_tree.py
(+2047 files in other folders)
