[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "biocode"
version = "0.1.0"
description = "BIOCAD bioinformatics toolkit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "biopython",
    "numpy",
    "pandas",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["biocode*"]

[tool.setuptools.package-dir]
"biocode" = "biocode"